# google-photos-migration

./: .gitignore  README.md  config.toml.example  pyproject.toml
src/google_photos_migration/: __init__.py  migrate.py
