[project]
name = "google-photos-migration"
version = "0.1.0"
description = "Migrate Google Takeout photos to Apple Photos with metadata and album structure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Che"}, {name="Claude"}
]

dependencies = [
    "osxphotos>=0.68.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
migrate-photos = "google_photos_migration.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_photos_migration"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
